[gd_scene load_steps=16 format=4 uid="uid://gij4mwjiyobo"]

[ext_resource type="Script" uid="uid://cvwd4e1tt3aqd" path="res://scripts/Chapter3/chap3_roomscripts.gd" id="1_cx8r8"]
[ext_resource type="PackedScene" uid="uid://2po5m5mgtl38" path="res://scene/Utility/world_environment_gloweffect.tscn" id="2_ql4h4"]
[ext_resource type="Texture2D" uid="uid://cvm1xsprhoww8" path="res://assets/sprites/prototype graphics.svg" id="3_wpogq"]
[ext_resource type="PackedScene" uid="uid://cfqff4kheixm" path="res://scene/Utility/area_2d_camera_room.tscn" id="4_16owc"]
[ext_resource type="Texture2D" uid="uid://c17lu264e832b" path="res://icon.svg" id="5_fsg3f"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2mqor"]
texture = ExtResource("3_wpogq")
texture_region_size = Vector2i(17, 17)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -8.5, 8.5, -8.5, 8.5, 8.5, -8.5, 8.5)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -8.5, 8.5, -8.5, 8.5, 0.5, -8.5, 0.5)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -0.5, 8.5, -0.5, 8.5, 8.5, -8.5, 8.5)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -8.5, 8.5, -8.5, 8.5, 8.5, -8.5, 8.5)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -8.5, 8.5, -8.5, 8.5, 8.5, -8.5, 8.5)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -8.5, 8.5, -8.5, 8.5, 8.5, -8.5, 8.5)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8.5, -8.5, 8.5, -8.5, 8.5, 8.5, -8.5, 8.5)

[sub_resource type="TileSet" id="TileSet_m1ycc"]
tile_size = Vector2i(17, 17)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2mqor")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwomj"]
size = Vector2(2550, 1360)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vv16d"]
size = Vector2(2384, 1184)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ayt4h"]
size = Vector2(340, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l7xgo"]
size = Vector2(17, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbx57"]
size = Vector2(17, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fua2h"]
size = Vector2(255, 255.349)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yoc51"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppykd"]
size = Vector2(255, 257.246)

[node name="chap3_roomB" type="Node2D"]
script = ExtResource("1_cx8r8")

[node name="WorldEnvironment_gloweffect" parent="." instance=ExtResource("2_ql4h4")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AADw//f/AAAAAAAAAADw//j/AAAAAAAAAADw//n/AAAAAAAAAADw//r/AAAAAAAAAADw//v/AAAAAAAAAADw//z/AAAAAAAAAADw/wIAAAAAAAAAAADw/wMAAAAAAAAAAADw/wQAAAAAAAAAAADw/wUAAAAAAAAAAADw/wYAAAAAAAAAAADw/wcAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAPf/AAAAAAAAAAAPAPj/AAAAAAAAAAAPAPn/AAAAAAAAAAAPAPr/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPz/AAAAAAAAAADw/wgAAAAAAAAAAADx/wgAAAAAAAAAAADy/wgAAAAAAAAAAADz/wgAAAAAAAAAAAD0/wgAAAAAAAAAAAD1/wgAAAAAAAAAAAD2/wgAAAAAAAAAAAD3/wgAAAAAAAAAAAD4/wgAAAAAAAAAAAD5/wgAAAAAAAAAAAD6/wgAAAAAAAAAAAD7/wgAAAAAAAAAAAD8/wgAAAAAAAAAAAD9/wgAAAAAAAAAAADx//f/AAAAAAAAAADy//f/AAAAAAAAAADz//f/AAAAAAAAAAD0//f/AAAAAAAAAAD1//f/AAAAAAAAAAD2//f/AAAAAAAAAAD3//f/AAAAAAAAAAD4//f/AAAAAAAAAAD5//f/AAAAAAAAAAD6//f/AAAAAAAAAAD7//f/AAAAAAAAAAD8//f/AAAAAAAAAAD9//f/AAAAAAAAAADw//3/AAAAAAAAAAACAPf/AAAAAAAAAAADAPf/AAAAAAAAAAAEAPf/AAAAAAAAAAAFAPf/AAAAAAAAAAAGAPf/AAAAAAAAAAAHAPf/AAAAAAAAAAAIAPf/AAAAAAAAAAAJAPf/AAAAAAAAAAAKAPf/AAAAAAAAAAALAPf/AAAAAAAAAAAMAPf/AAAAAAAAAAANAPf/AAAAAAAAAAAOAPf/AAAAAAAAAAACAAgAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAAAAAAAAAAOAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAP3/AAAAAAAAAADv//z/AAAAAAMAAADv//v/AAAAAAMAAADv//r/AAAAAAMAAADv//n/AAAAAAMAAADv//j/AAAAAAMAAADv//f/AAAAAAMAAADv//b/AAAAAAMAAADw//b/AAAAAAMAAADx//b/AAAAAAMAAADx//X/AAAAAAMAAADy//X/AAAAAAMAAADz//X/AAAAAAMAAAD0//X/AAAAAAMAAAD1//X/AAAAAAMAAAD2//X/AAAAAAMAAAD3//X/AAAAAAMAAAD3//b/AAAAAAMAAAD4//b/AAAAAAMAAAD5//b/AAAAAAMAAAD6//b/AAAAAAMAAAD7//b/AAAAAAMAAAD8//b/AAAAAAMAAAD8//X/AAAAAAMAAAD7//X/AAAAAAMAAAD6//X/AAAAAAMAAAD5//X/AAAAAAMAAAD4//X/AAAAAAMAAAD2//b/AAAAAAMAAAD1//b/AAAAAAMAAAD0//b/AAAAAAMAAADz//b/AAAAAAMAAADy//b/AAAAAAMAAADw//X/AAAAAAMAAADv//X/AAAAAAMAAADu//X/AAAAAAMAAADu//b/AAAAAAMAAADu//f/AAAAAAMAAADu//j/AAAAAAMAAADu//n/AAAAAAMAAADu//r/AAAAAAMAAADu//v/AAAAAAMAAADu//z/AAAAAAMAAADu/wIAAAAAAAAAAADu/wMAAAAAAAMAAADu/wQAAAAAAAMAAADu/wUAAAAAAAMAAADu/wYAAAAAAAMAAADu/wcAAAAAAAMAAADu/wgAAAAAAAMAAADv/wgAAAAAAAMAAADv/wcAAAAAAAMAAADv/wYAAAAAAAMAAADv/wUAAAAAAAMAAADv/wQAAAAAAAMAAADv/wMAAAAAAAMAAADv/wIAAAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAMAAAAEAPb/AAAAAAMAAAAFAPb/AAAAAAMAAAAGAPb/AAAAAAMAAAAHAPb/AAAAAAMAAAAIAPb/AAAAAAMAAAAJAPb/AAAAAAMAAAAKAPb/AAAAAAMAAAALAPb/AAAAAAMAAAAMAPb/AAAAAAMAAAANAPb/AAAAAAMAAAAOAPX/AAAAAAMAAAAPAPX/AAAAAAMAAAAPAPb/AAAAAAMAAAAOAPb/AAAAAAMAAAANAPX/AAAAAAMAAAAMAPX/AAAAAAMAAAALAPX/AAAAAAMAAAAKAPX/AAAAAAMAAAAJAPX/AAAAAAMAAAAIAPX/AAAAAAMAAAAHAPX/AAAAAAMAAAAGAPX/AAAAAAMAAAAFAPX/AAAAAAMAAAAEAPX/AAAAAAMAAAADAPX/AAAAAAMAAAACAPX/AAAAAAAAAAAQAPX/AAAAAAMAAAARAPX/AAAAAAMAAAARAPb/AAAAAAMAAAARAPf/AAAAAAMAAAARAPj/AAAAAAMAAAARAPv/AAAAAAMAAAARAPz/AAAAAAMAAAARAP3/AAAAAAAAAAAQAP3/AAAAAAAAAAAQAPz/AAAAAAMAAAAQAPv/AAAAAAMAAAAQAPr/AAAAAAMAAAAQAPn/AAAAAAMAAAAQAPj/AAAAAAMAAAAQAPf/AAAAAAMAAAAQAPb/AAAAAAMAAAARAPn/AAAAAAMAAAARAPr/AAAAAAMAAAARAAQAAAAAAAMAAAARAAMAAAAAAAMAAAARAAIAAAAAAAAAAAARAAUAAAAAAAMAAAARAAYAAAAAAAMAAAARAAcAAAAAAAMAAAARAAgAAAAAAAMAAAAQAAgAAAAAAAMAAAAQAAcAAAAAAAMAAAAQAAYAAAAAAAMAAAAQAAUAAAAAAAMAAAAQAAQAAAAAAAMAAAAQAAMAAAAAAAMAAAAQAAIAAAAAAAAAAADu/wkAAAAAAAMAAADv/wkAAAAAAAMAAADw/wkAAAAAAAMAAADx/wkAAAAAAAMAAADy/wkAAAAAAAMAAADz/wkAAAAAAAMAAAD0/wkAAAAAAAMAAAD1/wkAAAAAAAMAAAD3/wkAAAAAAAMAAAD4/wkAAAAAAAMAAAD5/wkAAAAAAAMAAAD6/wkAAAAAAAMAAAD7/wkAAAAAAAMAAAD8/wkAAAAAAAMAAAD9/wkAAAAAAAAAAAD9/woAAAAAAAAAAAD8/woAAAAAAAMAAAD7/woAAAAAAAMAAAD6/woAAAAAAAMAAAD5/woAAAAAAAMAAAD4/woAAAAAAAMAAAD3/woAAAAAAAMAAAD2/woAAAAAAAMAAAD1/woAAAAAAAMAAAD0/woAAAAAAAMAAADz/woAAAAAAAMAAADy/woAAAAAAAMAAADx/woAAAAAAAMAAADw/woAAAAAAAMAAADv/woAAAAAAAMAAADu/woAAAAAAAMAAAD2/wkAAAAAAAMAAAAQAAkAAAAAAAMAAAARAAkAAAAAAAMAAAAPAAkAAAAAAAMAAAAOAAkAAAAAAAMAAAANAAkAAAAAAAMAAAAMAAkAAAAAAAMAAAALAAkAAAAAAAMAAAAKAAkAAAAAAAMAAAAJAAkAAAAAAAMAAAAIAAkAAAAAAAMAAAAHAAkAAAAAAAMAAAAGAAkAAAAAAAMAAAAFAAkAAAAAAAMAAAAEAAkAAAAAAAMAAAADAAkAAAAAAAMAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAMAAAAEAAoAAAAAAAMAAAAFAAoAAAAAAAMAAAAGAAoAAAAAAAMAAAAHAAoAAAAAAAMAAAAIAAoAAAAAAAMAAAAJAAoAAAAAAAMAAAAKAAoAAAAAAAMAAAALAAoAAAAAAAMAAAAMAAoAAAAAAAMAAAARAAoAAAAAAAMAAAAQAAoAAAAAAAMAAAAPAAoAAAAAAAMAAAAOAAoAAAAAAAMAAAANAAoAAAAAAAMAAADv//3/AAAAAAAAAADu//3/AAAAAAAAAAD9//b/AAAAAAAAAAD9//X/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAAAAAAAAAD9/wAAAAAAAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAACAAIAAAAAAAAAAAD9//z/AAAAAAAAAAD+//z/AAAAAAAAAAD///z/AAAAAAAAAAAAAPz/AAAAAAAAAAABAPz/AAAAAAAAAAD9/wMAAAAAAAAAAAACAAMAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAP//AAAAAAAAAAABAAEAAAAAAAAAAAD9/wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD//wQAAAAAAAAAAAABAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_m1ycc")

[node name="Area2D_cameraRoom" parent="." instance=ExtResource("4_16owc")]
visible = false

[node name="Area2D_enemyCounter" type="Area2D" parent="."]
visible = false
collision_layer = 15
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_enemyCounter"]
shape = SubResource("RectangleShape2D_lwomj")

[node name="Area2D_reblock" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_reblock"]
shape = SubResource("RectangleShape2D_vv16d")

[node name="Area2D_bottom" type="Area2D" parent="."]
position = Vector2(2, 800)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_bottom"]
position = Vector2(-2, 92.5)
shape = SubResource("RectangleShape2D_ayt4h")

[node name="Area2D_left" type="Area2D" parent="."]
position = Vector2(-1408, -32)
scale = Vector2(5, 5)

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Area2D_left"]
position = Vector2(-26.1, 6.4)
shape = SubResource("RectangleShape2D_l7xgo")

[node name="Area2D_right" type="Area2D" parent="."]
position = Vector2(-1408, -32)
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_right"]
position = Vector2(589.3, 6.4)
shape = SubResource("RectangleShape2D_gbx57")

[node name="Sprite2D_block_Left" type="Sprite2D" parent="."]
position = Vector2(-1402.5, -8.01086e-05)
scale = Vector2(1.99219, 2.65625)
texture = ExtResource("5_fsg3f")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Left"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Left/StaticBody2D"]
shape = SubResource("RectangleShape2D_fua2h")

[node name="Sprite2D_block_Right" type="Sprite2D" parent="."]
position = Vector2(1402.5, 0.249924)
scale = Vector2(1.99219, 2.65235)
texture = ExtResource("5_fsg3f")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Right"]
scale = Vector2(0.501961, 0.501961)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Right/StaticBody2D"]
position = Vector2(0.499939, -0.187717)
shape = SubResource("RectangleShape2D_fua2h")

[node name="Sprite2D_block_Top" type="Sprite2D" parent="."]
position = Vector2(2.86102e-06, -807.5)
scale = Vector2(2.65625, 1.99219)
texture = ExtResource("5_fsg3f")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Top"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Top/StaticBody2D"]
position = Vector2(3.8147e-06, 0)
shape = SubResource("RectangleShape2D_yoc51")

[node name="Sprite2D_block_Bottom" type="Sprite2D" parent="."]
position = Vector2(9.53674e-07, 807.5)
scale = Vector2(2.65625, 1.99219)
texture = ExtResource("5_fsg3f")

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D_block_Bottom"]
position = Vector2(0, 0.558746)
scale = Vector2(0.501961, 0.497579)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D_block_Bottom/StaticBody2D"]
position = Vector2(-7.42077e-06, -1.12292)
shape = SubResource("RectangleShape2D_ppykd")
